--- a/estilo.css
+++ b/estilo.css
@@ -15,11 +15,11 @@ ul,li{
     color: black;
     cursor: pointer;
 }
-a{
+#links{
     color: black;
     text-decoration: none;
 }
-a:hover{
+#links:hover{
     color:#B310FF;
 }
 .fa-sun{
@@ -28,7 +28,7 @@ a:hover{
     left: -16px;
     font-size:0px;
 }
-a::after{
+#links::after{
     content: " ";
     width: 0%;
     height: 2px;
@@ -38,7 +38,7 @@ a::after{
     left:0;
     transition: 0.3s ease-in-out;
 }
-a:hover::after{
+#links:hover::after{
     width: 100%;
 }
 
@@ -62,6 +62,72 @@ a:hover::after{
 }
 p{
     color: black;
-    font-weight: 600;
     letter-spacing: 0.1rem;
+}
+.line {
+    color: rgba(0, 0, 19, 0.75);
+    font-size: 1.7em;
+    margin: 0 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    position: relative ;
+    left: 75px;
+}
+
+.typing-animation {
+    animation: blinkCursor 500ms steps(40) infinite normal,
+    typing 3s steps(40) 1s normal both;
+}
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 20em;
+    }
+}
+
+@keyframes blinkCursor {
+    from {
+        border-right-color: rgba(255, 255, 255, 0.75);
+    }
+    to {
+        border-right-color: transparent;
+    }
+}
+.perfil{
+    position: relative;
+    left:820px;
+    top: -377px;
+    width: 380px;
+}
+footer{
+
+}
+.btn{
+    display: inline-block;
+    background-color: #B310FF;
+    color: #fff;
+    position: relative;
+    top: -300px;
+    left: 200px;
+    font-weight: 800;
+    font-size: 1rem;
+    padding: .75rem 2.5rem;
+    font-family: 'Rubik', 'sans-serif';
+    border-color: #B310FF;
+    border: 2rem 2rem 2rem 2rem solid black;
+    border-radius: .5rem;
+    cursor: pointer;
+    transition:ease-in 0.5s;
+    position: relative;
+    text-transform: uppercase;
+    cursor: pointer;
+    overflow: hidden;
+    text-decoration: none;
+
+}
+.btn:hover{
+    background-image: linear-gradient(to bottom right, #2D0440 , #B310FF);
 }
